cabal-version:       2.2

name:                dragon
version:             0.0.0.0
synopsis:            Dragon curves
-- description:
homepage:            https://github.com/robrix/dragon
bug-reports:         https://github.com/robrix/dragon/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2019 Rob Rix
category:            Graphics
extra-source-files:  CHANGELOG.md

executable dragon
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
                     , blaze-svg
                     , bytestring
  default-language:    Haskell2010
